--- a/pages/projects/WinForms/museum-system.en-US.mdx
+++ b/pages/projects/WinForms/museum-system.en-US.mdx
@@ -1,1 +1,23 @@
 # Museum
+
+import { Steps } from 'nextra/components'
+
+<Steps>
+
+### Step 1
+What is the project about?  
+It is about managing the artifacts, employees and visit records in a museum. 
+
+### Step 2
+- Watch this video to get the information needed for managing the artifacts.  
+https://www.youtube.com/watch?v=DICLYO7H80U&ab_channel=DrHamdyElsorogy
+
+### Step 3
+- Watch this video to get the idea for managing employees in the museum.  
+https://www.youtube.com/watch?v=FsXbhr6KV_o&t=393s&ab_channel=DrHamdyElsorogy
+
+### Step 4
+The Requirments of the system.  
+
+
+</Steps>
