--- a/pages/reference/data-structures-and-algorithms.en-US.mdx
+++ b/pages/reference/data-structures-and-algorithms.en-US.mdx
@@ -62,7 +62,36 @@ DSA is about finding efficient ways to store and retrieve data, to perform opera
 - General Tree 
 - Binary Tree 
 
+---
+
+## Some Algorithms
+
+### Searching 
+
+- Linear Search
+- Binary Search
+
+### Sorting 
+
+- Bubble Sort
+- Selection Sort
+- Insertion Sort
+- Quicksort
+- Counting Sort
+- Radix Sort
+- Merge Sort
 
 
+## Tree Algorithms
 
+### Tree Traversal
 
+- Pre-order
+- In-order
+- Post-order
+- Level-order Traversal (BFS)
+- Binary Search Tree (BST)
+- Balanced Tree - AVL Tree
+- Balanced Trees - Red-Black Tree
+
+https://www.w3schools.com/dsa/dsa_theory_trees.php
