--- a/pages/reference/mdx.en-US.mdx
+++ b/pages/reference/mdx.en-US.mdx
@@ -1,6 +1,4 @@
-# Markdown
-
-## MDX Syntax
+# MDX Syntax here in Nextra
 
 MDX is a combination of Markdown and JSX, and regular Markdown syntax can be used for most formatting. What follows is a guide to the Markdown syntax supported by Gatsby. Each section gives the Markdown syntax, the HTML element it creates, and a demonstration of the element.
 
