--- a/pages/reference/oop.en-US.mdx
+++ b/pages/reference/oop.en-US.mdx
@@ -1,6 +1,6 @@
 # OOP
 
-OOP stands for Object-Oriented Programming.
+OOP stands for **Object-Oriented Programming**.
 
 ## Principles/Concepts of OOP
 
