--- a/pages/index.en-US.mdx
+++ b/pages/index.en-US.mdx
@@ -22,11 +22,12 @@ import { Cards, Card } from 'nextra/components'
 - [x] ~Add MDX syntax~
 - [x] ~Add C++ Util Classes~
 - [x] ~Add Problem Solving~
-- [x] Add OOP 
-- [x] Add simple Data Structures and Algorithms
-- [x] Add SQL 
-- [x] Add RESTFUL API 
-- [x] Add React 
+- [x] ~Add OOP~ 
+- [x] ~Add simple Data Structures and Algorithms~
+- [x] ~Add SQL~ 
+- [x] ~Add RESTFUL API~ 
+- [x] Add More details 
+
 
 ### Projects
 
