--- a/pages/index.ar-SA.mdx
+++ b/pages/index.ar-SA.mdx
@@ -1,1 +1,36 @@
 # مرحبا
+
+import { Callout } from 'nextra/components'
+ 
+<Callout type="info" emoji="ℹ️">
+  الموقع قيد الإنشاء
+</Callout>
+
+هذا الموقع هو توثيق لمشاريعي ومرجع لمساعدتي ومساعدة الآخرين
+
+import { Cards, Card } from 'nextra/components'
+ 
+<Cards>
+  <Card title="المرجع" href="/reference" />
+  <Card title="المشاريع" href="/projects" />
+</Cards>
+
+## قائمة المهام 
+
+### المرجع
+
+- [x] ~Add MDX syntax~
+- [x] ~Add C++ Util Classes~
+- [x] ~Add Problem Solving~
+- [x] ~Add OOP~ 
+- [x] ~Add simple Data Structures and Algorithms~
+- [x] ~Add SQL~ 
+- [x] ~Add RESTFUL API~ 
+- [x] Add More details 
+
+
+### المشاريع
+
+- [x] Add first Windows Forms project
+- [x] Add FrontEnd Mentor Challenges
+- [x] Add Freelance work
