--- a/pages/index.en-US.mdx
+++ b/pages/index.en-US.mdx
@@ -2,7 +2,7 @@
  
 import { Callout } from 'nextra/components'
  
-<Callout type="warning" emoji="⚠️">
+<Callout type="info" emoji="ℹ️">
   This Website is work in progrees.
 </Callout>
 
