--- a/pages/index.ar-SA.mdx
+++ b/pages/index.ar-SA.mdx
@@ -1,5 +1,7 @@
 # مرحبا
 
+فضلاً قم بتغيير اللغة من القائمة الى اللغة الانجليزية لان الصفحات باللغة العربية لم اكتب بها شئ بعد  
+
 import { Callout } from 'nextra/components'
  
 <Callout type="info" emoji="ℹ️">
